# code-challenge-notification

./: README.MD  docker-compose.yml
backend/: .pdm.toml  Dockerfile.api  pyproject.toml
backend/src/: .env  celerybeat-schedule  main.py  worker.py
backend/src/database/: base.py  database.py  init_db.py
backend/src/database/models/: message.py  notification.py  user.py
backend/src/notifications/: email.py  notification_factory.py  notification_handler.py  push_notification.py  sms.py
backend/src/routes/: messages.py  notifications.py  users.py
backend/src/schemas/: message.py  notification.py  user.py
backend/src/tests/: test_notifications.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.module.css  page.tsx
frontend/src/app/components/: form.tsx  logHistory.tsx  notificationHistory.tsx
frontend/src/app/hooks/: message.tsx  notifications.tsx
frontend/src/app/styles/: form.css  logs.css
frontend/src/app/types/: notification.tsx
