[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi[all]>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.18",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}
