[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi[all]>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.18",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.2",
    "celery>=5.3.1",
    "redis>=4.6.0",
    "pytest>=7.4.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
